<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lister</string>
    <string name="action_settings">Settings</string>
    <string name="item_hint">Enter Item</string>
    <string name="price_hint">Enter Price</string>
    <string name="enter_btn">Add</string>
    <string name="remove_btn">Remove</string>
    <string name="placeholder">default</string>
    <string-array name="default_list">
        <item >Ham</item>
        <item >Milk</item>
        <item >Cheese</item>
        <item >Yogurt</item>
        <item >Coffee</item>
        <item >Orange Juice</item>
        <item >Bread</item>
        <item >Hot Pockets</item>
        <item >Shampoo</item>
        <item >Peanut Butter</item>
        <item >Grape Jelly</item>
    </string-array>
    <string name="OpenButton">Open</string>
    <string name="SaveButton">Save</string>
    <string name="DeleteButton">Delete List</string>
    <string name="createlistbtn">New List</string>

</resources>
