
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        
    <item 
          android:id="@+id/open_btn"
          android:icon="@drawable/open"
          android:title="@string/OpenButton"
          android:showAsAction="always"/>
        
    <item 
          android:id="@+id/save_btn"
          android:icon="@drawable/save"
          android:title="@string/SaveButton" 
          android:showAsAction="always"/>
    <item 
        android:id="@+id/delete_btn"
        android:icon="@drawable/trash"
        android:title="@string/DeleteButton"
        android:showAsAction="always"/>
    
    <item android:id="@+id/new_file_btn"
        android:icon="@drawable/new_list"
        android:title="@string/createlistbtn"
        android:showAsAction="always"/>
        
    </menu>
