<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seamlesstexture2_1200"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="gravity"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="bottom|left"
        android:hint="@string/item_hint"
        android:inputType="none"
        android:lines="1"
        android:maxLines="1"
        android:paddingBottom="1dp"
        android:paddingLeft="5dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <requestFocus />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/editText1"
        android:background="@drawable/button_selector"
        android:text="@string/enter_btn"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="buttonClick" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:background="@drawable/row_shape"
        android:divider="@color/list_dividers"
        android:dividerHeight="1dp"
        android:entries="@array/default_list" >

    </ListView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/button1"
        android:background="@drawable/button_selector"
        android:lines="1"
        android:paddingLeft="0dp"
        android:text="@string/remove_btn"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="buttonClick" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color" />

</RelativeLayout>